manifests/helm-nfs-provisioner.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-provisioner
