manifests/helm-test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: helm-test-web
