manifests/test-rwx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    test: nfs-liveness
  name: nfs-liveness-exec
spec:
  replicas: 3
  selector:
    matchLabels:
      test: nfs-liveness
  template:
    metadata:
      labels:
        test: nfs-liveness
    spec:
      volumes:

      # volume for nfs mount
      - name: nfs-test
        persistentVolumeClaim:
          claimName: my-test-nfs-pvc-rwx
      # volume for DownwardAPI pod introspection
      - name: podinfo
        downwardAPI:
          items:
            - path: "name"
              fieldRef:
                fieldPath: metadata.name

      containers:
      - name:  nfs-liveness
        image: busybox:latest
        args:
        - /bin/sh
        - -c
        - sleep 3000

        # periodic liveness probe that reports back node,pod info written to shared NFS
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - echo $(date '+%Y-%m-%d %H:%M:%S') ISALIVE node=$MY_NODE_NAME pod=$MY_POD_NAME podip=$MY_POD_IP  >> /mnt/nfs1/nfs-liveness-exec
          initialDelaySeconds: 5
          periodSeconds: 20

        volumeMounts:
        # mount for shared NFS
        - name: nfs-test # template.spec.volumes[].name
          mountPath: /mnt/nfs1 # mount inside of container
        # mount for Downward API introspection
        - name: podinfo
          mountPath: /etc/podinfo

        # environment variables exposed
